feat: change flow model
